--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^19.1.6",
     "@types/web3": "^1.0.20",
     "axios": "^1.10.0",
+    "ethers": "^6.14.4",
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
